# pathmap

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
benches/: basics.rs  binary_keys.rs  cities.rs  hashing.rs  oeis.rs  parallel.rs  path_ops.rs  pointcloud.rs  product_zipper.rs  serde.rs  shakespeare.rs  sparse_keys.rs  superdense_keys.rs
examples/arena_compact_tests/: Cargo.toml
notes/: byterie_allocator.txt
pathmap-book/diagram_src/: 1.00.00_grafting.mmd  1.00.00_simple.mmd  1.00.00_structural_sharing.mmd  1.03.00_exclusivity_rules.mmd  1.04.00_product_zipper.mmd
pathmap-book/src/: 1.00.00_intro.md  1.00.01_basics.md  1.01.00_algebraic_ops.md  1.01.01_algebraic_traits.md  1.02.00_zippers.md  1.02.01_zipper_trait.md  1.02.02_zipper_values.md  1.02.03_zipper_paths.md  SUMMARY.md  (+14 more)
pathmap-derive/: Cargo.toml
pkg/: pathmap.js  pathmap_bg.wasm
src/: arena_compact.rs  bridge_node.rs  bytetrie.rs  bytize.rs  counters.rs  dense_byte_node.rs  empty_node.rs  empty_zipper.rs  experimental.rs  fuzzer.rs  lib.rs  limited_heap.rs  line_list_node.rs  main.rs  merkleization.rs  morphisms.rs  old_cursor.rs  overlay.rs  overlay_zipper.rs  path_serialization.rs  path_serialization_nightly.rs  path_tracker.rs  paths_serialization.rs  paths_serialization_nightly.rs  poly_zipper.rs  prefix_zipper.rs  product_zipper.rs  ptr_upgrade.rs  range_generator.rs  ring.rs  serialization.rs  timed_span.rs  tiny_node.rs  track_path.rs  tree_serialization.rs  trie_map.rs  trie_node.rs  trie_ref.rs  utils.rs  viz.rs  (+5 more)
whisper_benches/: app  run_all.sh  run_bench.sh
(+8 files in other folders)
